# SolarsystemFortran

./: .gitignore  CMakeLists.txt  LICENSE  README.md  TECHNICAL.md  build.sh  install.sh  run.sh
assets/spacecraft/: README.md
assets/spacecraft/framework/test_probe/: model.mtl
assets/spacecraft/framework/test_probe/textures/: diffuse.ppm
assets/spacecraft/imported/: README.md
assets/spacecraft/imported/real/voyager1/: README.md  model.mtl
assets/spacecraft/imported/trek/bird_of_prey/: README.md  model.mtl
assets/spacecraft/imported/trek/enterprise_ncc_1701/: README.md
assets/spacecraft/imported/trek/intrepid_glb/: model.mtl
assets/spacecraft/imported/trek/negh_var/: README.md
assets/spacecraft/imported/trek/voyager_ncc_74656/: README.md
assets/spacecraft/sources/real/: u.s.s._enterprise_discovery_based.glb
assets/spacecraft/sources/trek/: star_trek_-_intrepid_type.glb  star_trek_-_olympic_class.glb
assets/spacecraft/sources/trek/bird_of_prey/: source.3ds
movies/: .gitignore  README.md  annotate_with_captions.sh  compile_best_of.sh  real_plan.tsv  render_movies.sh  render_one.sh  shot_plan.tsv  trek_reel_plan.tsv
movies/captions/: voyager_story.tsv
movies/config/: cinematic_720p.toml
movies/docs/: ADD_NEW_SPACECRAFT.md  AI_CODERS.md  DRIVE_AND_CAPTURE.md  IMPORT_NEW_MODELS.md  MANIFESTS_AND_REELS.md  SHOT_AUTHORING.md  TROUBLESHOOTING.md
movies/papers/: AI_ASSISTED_MOVIE_PRODUCTION.md  CINEMATIC_SIDE_PROJECT_WHITEPAPER.md  MODEL_INTEGRATION_AND_ORIENTATION.md
movies/research/: voyager1_mission_notes.md
requirements/: ubuntu-apt.txt
scripts/: convert_spacecraft_3ds.py  convert_spacecraft_blend.py  convert_spacecraft_glb.py  convert_spacecraft_obj.py  fix_assimp_mtl_refs.py
shaders/: asteroid.frag  asteroid.vert  bloom_combine.frag  blur.frag  body.frag  body.vert  bright_pass.frag  corona.frag  corona.vert  fullscreen.vert  hud.frag  hud.vert  planet.frag  planet.vert  ring.frag  ring.vert  spacecraft.frag  spacecraft.vert  star.frag  star.vert  sun.frag  sun.vert  tonemap.frag  trail.frag  trail.vert
src/: main.f90
src/core/: config.f90  config_toml.f90  constants.f90  date_utils.f90  input.f90  logging.f90  perf.f90  vector3d.f90
src/physics/: body.f90  ephemerides.f90  integrator.f90  simulation.f90
src/render/: asteroids.f90  camera.f90  demo.f90  display_scale.f90  framebuffer.f90  gl_bindings.f90  hud_text.f90  mat4.f90  material.f90  mesh.f90  post.f90  renderer.f90  rings.f90  shader.f90  spacecraft_renderer.f90  starfield.f90  sun.f90  texture.f90  trails.f90  window.f90
src/spacecraft/: spacecraft_assets.f90  spacecraft_camera.f90  spacecraft_catalog.f90  spacecraft_materials.f90  spacecraft_system.f90  spacecraft_types.f90
src/ui/: menu.f90
tests/: test_date_utils.f90  test_physics.f90  test_spacecraft_controls.f90
